finshed large screen layout and layout alignment issues

--- a/main.css
+++ b/main.css
@@ -585,7 +585,7 @@ body {
 	padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
 	max-width: 50ch;
 }
 
@@ -677,7 +677,7 @@ body {
 	}
 
 	.destination-meta {
-		--gap: 6rem;
+		--gap: min(5vw, 6rem);
 		justify-content: start;
 	}
 }
